@@ -1,5 +1,7 @@
 Improvements :
 
+* Changed the ClassVectorParameterUI Float and Double parameter's precision to 4 (from 2).
+
 * Bound MurmurHash assignment operator as Python copyFrom() method.
 
 * Added python bindings for IECoreGL ToGLMeshPrimitiveConverter, ToGLCurvesPrimitiveConverter and ToGLPointsPrimitiveConverter.
